fixed button on profile aligning

--- a/css/profile.css
+++ b/css/profile.css
@@ -45,7 +45,7 @@
     font-size: 24px;
     margin: 0;
     padding: 0;
-    padding-left: 79px;
+    /*padding-left: 79px;*/
     text-indent: 25px;
 }
 
@@ -67,7 +67,7 @@
 }
 
 .editBtn {
-    margin-right: 35px;
+        margin-right: 21px;
 }
 
 li {
